--- a/Recipes/Muffins.html
+++ b/Recipes/Muffins.html
@@ -1,3 +1,23 @@
 <h1>Muffins<h1>
   <img src = "../image/muffins">
-  <h3>Chocolate muffins</h3>
+  <h2>Description</h2>
+  <h3>Ingredients </h3>
+  <ul>
+    <li> 6 (1 ounce) squares semisweet chocolate </li>
+    <li> ⅓ cup unsalted butter </li>
+    <li> ¾ cup buttermilk </li>
+    <li> ½ cup white sugar </li>
+    <li> 1 egg </li>
+    <li> 1 ½ teaspoons vanilla extract </li>
+    <li> 1 ⅔ cups all-purpose flour </li>
+    <li> 1 teaspoon baking soda </li>
+    <li> ½ teaspoon salt </li>
+    <li> 1 cup mini semi-sweet chocolate chips </li>
+  </ul>
+  
+  <h3> Directions </h3>
+  <p> <h4> STEP 1 </h4> <br>
+  Preheat the oven to 400 degrees F (205 degrees C). Line 12 muffin cups with papers.
+  <p>
+       
+  
