--- a/Recipes/Muffins.html
+++ b/Recipes/Muffins.html
@@ -16,8 +16,21 @@
   </ul>
   
   <h3> Directions </h3>
-  <p> <h4> STEP 1 </h4> <br>
+  <p> <h4> STEP 1 </h4>
   Preheat the oven to 400 degrees F (205 degrees C). Line 12 muffin cups with papers.
-  <p>
-       
-  
+  </p>
+  <p> <h4> STEP 2 </h4>
+  In a small saucepan over low heat, melt the semisweet chocolate together with the butter. Let stand until cooled, about 10 minutes.
+  </p>
+<p> <h4> STEP 3 </h4>
+Lightly beat the egg. In a small bowl, stir together the chocolate-butter mixture with the buttermilk, sugar, egg, and vanilla, until blended well.
+</p>
+<p> <h4> STEP 4 </h4>
+In a large bowl, stir together flour, soda, and salt. Make a hole in the center of the dry ingredients, pour in the chocolate mixture, 
+and stir until just combined. Stir in the mini chocolate chips. Spoon the batter into the lined muffin cups.
+</p>
+<p> <h4> STEP 5 </h4>
+Bake at 400 degrees F (205 degrees C) for 20-25 minutes or until a toothpick inserted in the center of a muffin comes out clean. 
+Remove muffin tin from oven and let stand at least 5 minutes, before removing the muffins and letting them cool on a wire rack. 
+Serve warm or cooled; can be frozen as well.
+</p>
