--- a/Recipes/PastaSalad.html
+++ b/Recipes/PastaSalad.html
@@ -1,1 +1,15 @@
-
+<h1> Pasta Salad </h1>
+<img src = "../image/pasta.jpeg">
+<h2> Description <h2>
+  <h3>INGREDIENTS </h3>
+  <ul>
+    <li> 1 (16 ounce) package fusilli (spiral) pasta </li>
+    <li> 3 cups cherry tomatoes, halved </li>
+    <li> ½ pound provolone cheese, cubed </li>
+    <li> ½ pound salami, cubed </li>
+    <li> ¼ pound sliced pepperoni, cut in half </li>
+    <li> 1 large green bell pepper, cut into 1 inch pieces </li>
+    <li> 1 (10 ounce) can black olives, drained </li>
+    <li> 1 (4 ounce) jar pimentos, drained </li>
+    <li> 1 (8 ounce) bottle Italian salad dressing </li>
+  </ul>
