--- a/Recipes/PastaSalad.html
+++ b/Recipes/PastaSalad.html
@@ -13,3 +13,11 @@
     <li> 1 (4 ounce) jar pimentos, drained </li>
     <li> 1 (8 ounce) bottle Italian salad dressing </li>
   </ul>
+  
+  <h3> Directions </h3>
+  <ol>
+    <li> Bring a large pot of lightly salted water to a boil. Add pasta, and cook for 8 to 10 minutes or until al dente. 
+      Drain, and rinse with cold water. </li>
+    <li> n a large bowl, combine pasta with tomatoes, cheese, salami, pepperoni, green pepper, olives, and pimentos. 
+      Pour in salad dressing, and toss to coat. </li>
+  </ol>
