--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 
 <body>
     <h1> ODIN RECIPES </h1>
-    <a href = "./Recipes/Muffins">Muffins Reciep</a><br>
+    <a href = "./Recipes/Muffins">Muffins Reciep</a> <br>
+    <a href = "./Recipes/PastaSalad">Pasta Salad </a> <br>
 </body>
