--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
     <h1> ODIN RECIPES </h1>
     <a href = "./Recipes/Muffins">Muffins Reciep</a> <br>
     <a href = "./Recipes/PastaSalad">Pasta Salad </a> <br>
+    <a href = "./Recipes/Lasagna">Lasagna </a> <br>
 </body>
