--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1> ODIN RECIPES </h1>
-    <a href = "./Recipes/Muffins">Muffins Reciep</a> <br>
-    <a href = "./Recipes/PastaSalad">Pasta Salad </a> <br>
-    <a href = "./Recipes/Lasagna">Lasagna </a> <br>
+    <a href = "./Recipes/Muffins" target="_blank">Muffins Reciep</a> <br>
+    <a href = "./Recipes/PastaSalad" target="_blank">Pasta Salad </a> <br>
+    <a href = "./Recipes/Lasagna" target="_blank">Lasagna </a> <br>
 </body>
