--- a/Recipes/Muffins.html
+++ b/Recipes/Muffins.html
@@ -1,5 +1,5 @@
 <h1>Muffins<h1>
-  <img src = "../image/muffins">
+  <img src = "../image/muffins" alt = "Chocolate Muffins">
   <h2>Description</h2>
   <h3>Ingredients </h3>
   <ul>
