--- a/Recipes/PastaSalad.html
+++ b/Recipes/PastaSalad.html
@@ -1,5 +1,5 @@
 <h1> Pasta Salad </h1>
-<img src = "../image/pasta.jpeg">
+<img src = "../image/pasta.jpeg" alt = "Pasta Salad">
 <h2> Description <h2>
   <h3>INGREDIENTS </h3>
   <ul>
