--- a/Recipes/Lasagna.html
+++ b/Recipes/Lasagna.html
@@ -1,5 +1,5 @@
 <h1> Lasagna <h1>
-  <img src = "../image/lasagna"> <br>
+  <img src = "../image/lasagna" alt = "Lasgna"> <br>
   <h> Description </h2>
   <h3> Ingredients </h3>
   <ol>
